# actionproof

./: .gitignore  Dockerfile  LAUNCH.md  LICENSE  README.md  SPEC.md  package-lock.json  package.json  server.json  tsconfig.json
python/: README.md  pyproject.toml
python/actionproof/: __init__.py  canonical.py  core.py  keys.py  wrap.py
python/tests/: test_actionproof.py
scripts/: fix-shebang.mjs
src/: actionproof.test.ts  canonical.ts  demo.ts  index.ts  keys.ts  keystore.ts  mcp.ts  wrap.test.ts  wrap.ts
