[project]
name = "actionproof"
version = "0.0.1"
description = "Verifiable receipts that prove what an AI agent did. Sign locally, verify anywhere, zero backend."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai-agents", "provenance", "receipts", "ed25519", "audit-trail", "proof-of-execution"]
dependencies = ["cryptography>=41.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actionproof"]
