[project]
name = "actionproof"
version = "0.0.3"
description = "Tamper-proof audit trail for AI agents — the verifiable layer of agent observability. Signed, offline-verifiable receipts for every agent action. Zero backend."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai-agents", "agent-observability", "observability", "audit-trail", "provenance", "receipts", "ed25519", "compliance", "proof-of-execution"]
dependencies = ["cryptography>=41.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actionproof"]
